backend/feat/adjust backend docker

--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,10 @@
 PORT=3000
-DATABASE_URL="postgresql://postgres:123456@localhost:5432/activities_with_friends?schema=public"
+DATABASE_URL="postgresql://postgres:123456@postgres:5432/activities_with_friends?schema=public"
 USER_BUCKET="user-avatars"
 ACTIVITY_BUCKET="activity-images"
 ACTIVITY_TYPE_BUCKET="activity-type-images"
 JWT_SECRET="9380ry5dasibibasganonn2h8asibnfasfçasfnih91h28h47hasnlasai"
-S3_ENDPOINT=http://localhost:4566
+S3_ENDPOINT=http://localstack:4566
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY=test
 AWS_SECRET_ACCESS_KEY=test
